
Markdown:
 * Avoid searching for bullets in code blocks (GitHub's #550)
   [Alexander Golubev].
 * Ensure the parser avoids infinite loops, even when a document ends with an
   incorrect number of backticks, leaving a code block incomplete (GitHub's
   #558 and #560) [reported by Jibec, and fixed by gemmaro].

Org:
 * New module (GitHub's #485) [gemmaro].

TeX:
 * Fix read error of input/include files in TeX files (thanks Alex Karabanov)
 * latex: Fix a failure when \input is surrounded with {curly braces}.
   Thanks to Mayeul Cantan for the report and fix, and to Alex Karabanov
   for the test case.

Texinfo:
 * Allow spaces before line-breaking commands and fix some warnings
   (GitHub's #497) [Alexander Golubev].

VimHelp:
 * New module (GitHub's #525) [gemmaro].
 * Allow for an optional Vim language specification in code blocks
   (GitHub's #552) [Gemmaro].

Internal refactorings:
 * Remove DynaLoader (GitHub's #532) [gemmaro].
 * Improve the code when reading a non-UTF po file (GitHub's #538)
   [Golubev Alexander].

Translations:
 * New translation: Romanian, thanks to Remus-Gabriel Chelu.
 * New translation: Tamil, thanks தமிழ்நேரம்.
 * Updated: Chinese (Traditional), thanks Ricky From Hong Kong.
 * Updated: Croatian, thanks Milo Ivir.
 * Updated: Dutch, thanks Frans Spiesschaert and Henk De Groot.
 * Updated: Georgian, thanks Temuri Doghonadze.
 * Updated: German, thanks Helge Kreutzmann.
 * Updated: Italian, thanks Marco Ciampa.
 * Updated: Japanese, thanks gemmaro.
 * Updated: Russian, thanks Alex Karabanov and Golubev Alexander.
 * Updated: Serbian, thanks Ivan Pesic.
 * Updated: Spanish, thanks gallegonovato and Francisco Serrador.
 * Updated: Portuguese (Brazil), thanks Rafael Fontenelle.
 * Updated: Portuguese, thanks ssantos.
 * Updated: Ukrainian, thanks Yuri Chornoivan.

=======================================================================
        ___  _____ _____
__   __/ _ \|___  |___ /
\ \ / / | | |  / /  |_ \          The Cassini release.