@@ -30,6 +30,12 @@ Markdown:
 Org:
  * New module (GitHub's #485) [gemmaro].
 
+Pod:
+ * Add an announcement warning to the Pod module. (GitHub's #573) [gemmaro].
+
+SimplePod:
+ * New module (GitHub's #573) [gemmaro].
+
 TeX:
  * Fix read error of input/include files in TeX files (thanks Alex Karabanov)
  * latex: Fix a failure when \input is surrounded with {curly braces}.
